--- a/Uni Panamericana/Fade4.html
+++ b/Uni Panamericana/Fade4.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.up.edu.mx/en/international/mex';
+                adfClickTAGUrl = 'http://love4native.com/universidad-panamericana/';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
