--- a/Asisa/Fade.html
+++ b/Asisa/Fade.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.midas.es/';
+                adfClickTAGUrl = 'https://www.asisa.es/seguros-medicos/ofertas-seguros-medicos';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -91,7 +91,7 @@
             z-index: 5;
             margin-left: 48%;
             left: -30px;
-            background-color: #f2c60c;
+            background-color: #;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -110,15 +110,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/3f4uAkr.jpg)
+            background-image: url(https://i.imgur.com/qJzQLKw.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/6jWGj10.jpg)
+            background-image: url(https://i.imgur.com/FCxW8cd.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/XKlr1nY.jpg)
+            background-image: url(https://i.imgur.com/TyP0aAg.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
@@ -179,7 +179,7 @@
         .ClaroColombiaFade .bzm_text_small {
             font-size: 10px;
             line-height: 1;
-            margin-top: 4px
+            margin-top: -4px
         }
 
         .ClaroColombiaFade .carousel-wrapper {
@@ -300,7 +300,7 @@
 <body class="ClaroColombiaFade" style="margin:0px;">
   
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-       <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%;">Infórmate</span></div>
+       <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%;"></span></div>
         <a href="%%c1;cpdir=" style="display: block;" target="_blank">
            
         
@@ -309,10 +309,10 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px;">Ahorra tranquilamente</span></div>
-            <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:16px; font-style: italic; margin-top: -10px;">Incluso en la revisión de tu coche con La Revisión Oficial Midas</span></div>
-            <div style="bottom:0px;height: 26px;text-align:right;margin-top:-10px;"> 
-              <img src="https://i.imgur.com/jOh1dFA.png" style="height:33px;margin-right:5px;">
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px;"></span></div>
+            <div class="bzm_text_small"> <span class="bzm_text_small" style="color:#000;line-height:1;font-size:16px; font-style: italic; margin-top: -5px;">¿Sabías que combinar tus seguros de salud y dental te puedes <b>ahorrar hasta un 30%</b>?</span></div>
+            <div style="bottom:0px;height: 2px;text-align:right;margin-top:8px;"> 
+              <img src="https://i.imgur.com/Ipehvcr.png" style="height:16px;margin-right:5px;">
             </div>
         </a>
     </div>
