--- a/Asisa/Venetian.html
+++ b/Asisa/Venetian.html
@@ -2252,7 +2252,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Con Assisa, cuanto más te cuidamos más ahorras.</div>
+<div id="i7">Con Asisa, cuanto más te cuidamos más ahorras.</div>
 <!--#/#--><!--#i12.text.html:text/html-->
 <div id="i12">Hasta el 31 de Enero ahorra hasta un 30% en tu seguro de salud y dental.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
