--- a/Desafio fuego/fade2.html
+++ b/Desafio fuego/fade2.html
@@ -327,7 +327,7 @@
         </div>
         <div class="fuego_text"> 
             <span class="fuego_text_title fuego_text_bold">
-             Cada martes podrás ver e
+             ¿Quieres ver a los mejores maestros del fuego crear armas al rojo vivo?
             </span>
             <br/>  
             <span class="fuego_text_light fuego_text_small" style="color:black;">
