--- a/Formatos ADS/ExpandDoble/Slider+Cubo/Slider+Cubo.html
+++ b/Formatos ADS/ExpandDoble/Slider+Cubo/Slider+Cubo.html
@@ -39,6 +39,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     bottom: 0;
     left: 0;
     right: 0;
+    border: 1px solid #c5c5c5;
 }
 .adf-FlexGallery-Panel {
     -webkit-backface-visibility:hidden;
