--- a/Formatos ADS/Fades/fade-completo.html
+++ b/Formatos ADS/Fades/fade-completo.html
@@ -361,7 +361,7 @@
    
   
   <div class="value_wrapper carousel-wrapper size_320x480">
-    <a href="https://form.divemotor.com/testdrive/8483726342/?gclid=CjwKCAiAiarfBRASEiwAw1tYvw5FatADjyAHHyo_JgzzptodCdUZA285MqcO3EtT1K6Ejs-EokgfNRoCtc0QAvD_BwE" target="_blank">
+    <a href="https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1" target="_blank">
   
        
       
