--- a/HEB BLOG/fade-completo.html
+++ b/HEB BLOG/fade-completo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
-    <title>300-600 mercedes</title>
+    <title>300-600 heb</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <style>
@@ -233,18 +233,18 @@
         .item-1 {
             z-index: 2;
             opacity: 1;
-            animation: fade 8s infinite;
-            -webkit-animation: fade 8s infinite;
+            animation: fade 10s infinite;
+            -webkit-animation: fade 10s infinite;
         }
 
         .item-2 {
-            animation: fade2 8s infinite;
-            -webkit-animation: fade2 8s infinite;
+            animation: fade2 10s infinite;
+            -webkit-animation: fade2 10s infinite;
         }
 
         .item-3 {
-            animation: fade3 8s infinite;
-            -webkit-animation: fade3 8s infinite;
+            animation: fade3 10s infinite;
+            -webkit-animation: fade3 10s infinite;
         }
 
         @keyframes fade {
@@ -349,6 +349,10 @@
             margin-right: 20px;
         }
 
+        .botones-para-compartir{
+            z-index: 10px;
+        }
+
     </style>
    
 </head>
@@ -356,6 +360,7 @@
 
 <body class="value">
        <div class="te-container">
+       <a href="https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank">
     
   <div class="cta"><a href=" " target="_blank"> <img src=" " style="height: 30px;"></a></div>   
   
@@ -365,9 +370,9 @@
    
    
    
-    <a href="https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank">
+   
   
-       <div id="botones-para-compartir" style="display:inline;float:left;margin-top:540px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> 
+       <div id="botones-para-compartir" style="display:inline;float:left;margin-top:570px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
       
 
         <div class="value_cover bg cover-1 carousel-item item-1">
