--- a/HEB BLOG/fade-completo.html
+++ b/HEB BLOG/fade-completo.html
@@ -89,7 +89,7 @@
         .value_cover {
             position: relative;
             width: 100%;
-            height: 100%;
+            height: 90%;
         }
 
         .bg.cover-1 {
@@ -233,18 +233,18 @@
         .item-1 {
             z-index: 2;
             opacity: 1;
-            animation: fade 10s infinite;
-            -webkit-animation: fade 10s infinite;
+            animation: fade 15s infinite;
+            -webkit-animation: fade 15s infinite;
         }
 
         .item-2 {
-            animation: fade2 10s infinite;
-            -webkit-animation: fade2 10s infinite;
+            animation: fade2 15s infinite;
+            -webkit-animation: fade2 15s infinite;
         }
 
         .item-3 {
-            animation: fade3 10s infinite;
-            -webkit-animation: fade3 10s infinite;
+            animation: fade3 15s infinite;
+            -webkit-animation: fade3 15s infinite;
         }
 
         @keyframes fade {
@@ -345,8 +345,8 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: -45px;
-            margin-right: 20px;
+            margin-top: 560px;
+            margin-right:10px
         }
 
         .botones-para-compartir{
@@ -373,6 +373,10 @@
    
   
        <div id="botones-para-compartir" style="display:inline;float:left;margin-top:570px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://hebbabies.com.mx/snacks-para-tener-en-la-panalera/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
+
+        <div class="logo">
+                        <img src="https://i.imgur.com/xN2vglL.png" style="height:31px">
+                    </div>
       
 
         <div class="value_cover bg cover-1 carousel-item item-1">
