--- a/HP/Cube.html
+++ b/HP/Cube.html
@@ -827,7 +827,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Vigente del 9 de enero al 10 de febrero</div>
+<div id="i34">Vigente del 9 de enero al 10 de febrero.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/N61tQRk.png"/>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
