--- a/HP/Cube.html
+++ b/HP/Cube.html
@@ -799,7 +799,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Quires ganarte unos boletos de cine? ¡Y sólo por comprar consumibles!</div>
+<div id="i14">¿Quieres ganarte unos boletos de cine? ¡Y sólo por comprar consumibles!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/FQFgjBH.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
