--- a/HP/ZoomExp300x600.html
+++ b/HP/ZoomExp300x600.html
@@ -173,7 +173,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px;  text-decoration: none;">¿Quién te dá boletos de cine por comprar consumibles?</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px;  text-decoration: none;">¿Quién te da boletos de cine por comprar consumibles?</span><br>
 
     <span class=" ism_text_medium" style="font-family:Arial; color:#000000; font-size:13px; text-align:center; text-decoration: none; margin-top: 5px;">Tan solo compra consumibles originales HP, registra tu ticket y canjéalo por boletos de cine o por tu bebida favorita. </span>     <span class=" ism_text_medium" style="font-family:Arial; color:#000000; font-size:11px; text-align: center; text-decoration: none; margin-top: 5px;"><b>Vigente del 9 de enero al 10 de febrero.</b></span>                 
                    </div>
