--- a/HP/Cube.html
+++ b/HP/Cube.html
@@ -507,14 +507,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i181.image.css:image/base/css*/
+#i181 { opacity: 1; }
+/*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 33px;
+        -ms-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+        transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+}
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 72px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -525,8 +534,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i181.image.css:image/base/css*/
-#i181 { opacity: 1; }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
@@ -551,14 +558,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+/*#/#*//*#i5.i184.image.css:image/base/css*/
+#i184 { opacity: 1; }
+/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
+#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 33px;
+        -ms-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+        transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
+}
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -691,28 +707,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 33px;
-        -ms-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-}
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 #i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i184.image.css:image/base/css*/
-#i184 { opacity: 1; }
-/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 33px;
-        -ms-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(211px, 215px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -739,13 +739,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 20px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 218px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -798,12 +798,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i4" class="panel-content-holder">
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
+<!--#/#--><!--#i4.i181.image.html:image/html-->
+<img id="i181" src="https://i.imgur.com/J1Zn3jp.jpg"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Quieres ganarte unos boletos de cine? ¡Y sólo por comprar consumibles!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/FQFgjBH.png"/>
-<!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i.imgur.com/J1Zn3jp.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -812,12 +812,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
+<!--#/#--><!--#i5.i184.image.html:image/html-->
+<img id="i184" src="https://i.imgur.com/tLC9uIN.jpg"/>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Tan solo compra consumibles originales HP, registra tu ticket y canjéalo por boletos de cine o por tu bebida favorita.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/wXMPwlM.png"/>
-<!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i.imgur.com/tLC9uIN.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -873,12 +873,12 @@ document.getElementById('i2').addEventListener('showPrevious', function(e){
 document.getElementById('i2').addEventListener('showNext', function(e){
     cube_i2.rotate(cube_i2.ROTATE_NEXT)
 });
-/*#/#*//*#i4.i130.image.js:image/base/js*/
-
 /*#/#*//*#i4.i181.image.js:image/base/js*/
 
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
 bmShow('i181');
+/*#/#*//*#i4.i130.image.js:image/base/js*/
+
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -889,12 +889,12 @@ document.getElementById('i91').addEventListener('click', function(e){
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i5.i58.image.js:image/base/js*/
-
 /*#/#*//*#i5.i184.image.js:image/base/js*/
 
 /*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
 bmShow('i184');
+/*#/#*//*#i5.i58.image.js:image/base/js*/
+
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -952,6 +952,11 @@ customName: 1;
 name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i181.image.meta:image/meta*/
+name: J1Zn3jp.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i14.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
@@ -960,11 +965,6 @@ data: /*!*/{}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i181.image.meta:image/meta*/
-name: J1Zn3jp.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
@@ -976,6 +976,11 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i5.i184.image.meta:image/meta*/
+name: tLC9uIN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i24.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i24.i25.positioning.meta:positioning/meta.1*/
@@ -984,11 +989,6 @@ data: /*!*/{}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i184.image.meta:image/meta*/
-name: tLC9uIN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
