--- a/Chevron/FadeExt.html
+++ b/Chevron/FadeExt.html
@@ -339,7 +339,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             ¿Que tiene que cumplir un buen lubricante para tu auto?
+             ¿Qué tiene que cumplir un buen lubricante para tu auto?
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
