--- a/Italika/ZoomExp300x600.html
+++ b/Italika/ZoomExp300x600.html
@@ -174,7 +174,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px;  text-decoration: none;">¡El mejor desempeño te esta esperando!</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px;  text-decoration: none;">¡El mejor desempeño te está esperando!</span><br>
 
     <span class=" ism_text_medium" style="font-family:Arial; color:#000000; font-size:16px; text-align:center; text-decoration: none; ">La DT200 Sport es el modelo con más atributos deportivos de nuestra familia de trabajo.</span>                  
                    </div>
