--- a/Chevron/Venetian.html
+++ b/Chevron/Venetian.html
@@ -2154,11 +2154,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 52px;
-        -ms-transform: translate(0, 0) translate(269px, 422px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(269px, 422px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(269px, 422px) rotate(0deg);
-        transform: translate(0, 0) translate(269px, 422px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 32px; height: 36px;
+        -ms-transform: translate(0, 0) translate(282px, 317px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(282px, 317px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(282px, 317px) rotate(0deg);
+        transform: translate(0, 0) translate(282px, 317px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2235,22 +2235,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(42px, 361px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 23px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 260px; height: 85px;
-        -ms-transform: translate(0, 0) translate(30px, 252px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(30px, 252px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(30px, 252px) rotate(0deg);
-        transform: translate(0, 0) translate(30px, 252px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 306px; height: 85px;
+        -ms-transform: translate(0, 0) translate(8px, 259px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 259px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 259px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 259px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
 #i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 250px; height: 24px;
-        -ms-transform: translate(0, 0) translate(35px, 330px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 330px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 330px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 330px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(34px, 305px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(34px, 305px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(34px, 305px) rotate(0deg);
+        transform: translate(0, 0) translate(34px, 305px) rotate(0deg);
+}
+/*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
+#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 25.208333333333332%;
+        -ms-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2278,6 +2285,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i63">¿Quieres que tu vehículo circule mejor y por más tiempo?</div>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">Tu distribuidor más cercano aquí.</div>
+<!--#/#--><!--#i70.container.html:container/html-->
+<div id="i70">
+    
+</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2343,19 +2354,6 @@ if ('click' === 'click') {
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
 bmShow('i44');
-/*#/#*//*#i44.i48.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i44');
-
-el.addEventListener('click', function(e){
-    /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/ys6GSxNqdnx'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2364,21 +2362,25 @@ bmShow('i16');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
-/*#/#*//*#i46.i50.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i46');
-
-
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i50.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-   
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
+/*#/#*//*#i70.i71.positioning.js:positioning/base/js.2*/
+bmShow('i70');
+/*#/#*//*#i70.i72.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i70');
+
+el.addEventListener('click', function(e){
+    /*#i72.i73.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/ys6GSxNqdnx'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2429,5 +2431,10 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
 name: Tu distribuidor más cercano aquí.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i70.container.meta:container/meta*/
+name: Container 1;
+data: /*!*/{}/*!*/;
+/*#/#*//*#i70.i71.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
