--- a/HP/Cube.html
+++ b/HP/Cube.html
@@ -803,7 +803,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Quieres ganarte unos boletos de cine? ¡Y sólo por comprar consumibles!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/FQFgjBH.png"/>
+<img id="i130" src="https://i.imgur.com/mLY2Hq7.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -817,7 +817,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Tan solo compra consumibles originales HP, registra tu ticket y canjéalo por boletos de cine o por tu bebida favorita.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/wXMPwlM.png"/>
+<img id="i58" src="https://i.imgur.com/2kObgvD.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -829,7 +829,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Vigente del 9 de enero al 10 de febrero.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/N61tQRk.png"/>
+<img id="i60" src="https://i.imgur.com/eFEjYaC.jpg"/>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
 <img id="i186" src="https://i.imgur.com/5MA4jM7.jpg"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
