--- a/xcaret 2/fade-small.html
+++ b/xcaret 2/fade-small.html
@@ -73,7 +73,7 @@
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/OGnXvO9.png)
+            background-image: url(https://i.imgur.com/Rq1iLSq.png)
         }
 
         .fadesmall .bg.cover-3 {
