--- a/xcaret 2/Cube.html
+++ b/xcaret 2/Cube.html
@@ -508,7 +508,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 46px;
         -ms-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
@@ -799,9 +799,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Disfruta de la aventura en familia en un hotel de ensueño.</div>
+<div id="i14">Una experiencia que no cabe en una reseña. ¡¡Vívela!!
+All-fun inclusive.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/XP1pM9g.png"/>
+<img id="i130" src="https://i.imgur.com/2EqhQCR.png"/>
 <!--#/#--><!--#i4.i186.image.html:image/html-->
 <img id="i186" src="https://i.imgur.com/lKx4eDq.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
