--- a/HP/fijo.html
+++ b/HP/fijo.html
@@ -207,10 +207,10 @@
         <a href="http://www.hp.com.mx/consumiblesoriginales" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/mx3UkPY.jpg" alt="" /> 
+                <img src="https://i.imgur.com/bCjS00z.jpg" alt="" /> 
                  </div>
                 <div class="te-cover"> 
-                    <img src="https://i.imgur.com/mx3UkPY.jpg" alt="" /> 
+                    <img src="https://i.imgur.com/bCjS00z.jpg" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
