--- a/HP/Venetian.html
+++ b/HP/Venetian.html
@@ -2243,16 +2243,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i26.button.css:button/base/css*/
-#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(115,114,114,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
-#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 599px;
-        -ms-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
+/*#/#*//*#i35.shape.css:shape/base/css*/
+#i35 { background-color: ; opacity: 1;
+}
+/*#/#*//*#i35.i36.positioning.css:positioning/base/css.2*/
+#i35 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2276,8 +2275,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i32" src="https://i.imgur.com/TEJlGa5.jpg"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i26.button.html:button/html-->
-<button id="i26"></button>
+<!--#/#--><!--#i35.shape.html:shape/html-->
+<div id="i35"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2286,6 +2285,8 @@ bmShow('i30');
 bmShow('i7');
 /*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
 bmShow('i12');
+/*#/#*//*#i33.i34.positioning.js:positioning/base/js.2*/
+bmShow('i33');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2332,14 +2333,14 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i32.slice-image.js:slice-image/base/js.1*/
 
-/*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
-bmShow('i26');
-/*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
+/*#/#*//*#i35.i36.positioning.js:positioning/base/js.2*/
+bmShow('i35');
+/*#/#*//*#i35.i37.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i26');
+var el = document.getElementById('i35');
 
 el.addEventListener('click', function(e){
-    /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i37.i38.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www8.hp.com/mx/es/cartridge/ink.html'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2347,8 +2348,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i33.i34.positioning.js:positioning/base/js.2*/
-bmShow('i33');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2393,9 +2392,8 @@ name: TEJlGa5.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i26.button.meta:button/meta*/
-name: ;
-customName: false;
-/*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i35.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i35.i36.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
