--- a/xcaret 2/Cube.html
+++ b/xcaret 2/Cube.html
@@ -814,7 +814,7 @@ All-fun inclusive.</div>
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Si te gusta México y la aventura, no te puedes perder esto...</div>
+<div id="i24">Si te gusta la aventura, no te puedes perder esto...</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/x6F8Sxl.png"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
