--- a/xcaret 2/FadeBig.html
+++ b/xcaret 2/FadeBig.html
@@ -346,7 +346,7 @@
             <span class="tgx_text_title tgx_text_bold">
              Una experiencia que no cabe en una reseña. ¡¡Vívela!! <br> All-fun inclusive.
             </span>
-              <span class=" tgx_text_small" style="font-family:Arial; color:#000000; font-size:14px; text-decoration: none; margin-top: -5px; text-align: justify;">Disfruta tu estancia en México con <b>todo incluido: </b>habitación, entrada a parques como Xel-Há, Xcaret, transportación aeropuerto-hotel, alimentos y bebidas... <b>leer más. </b></span> 
+              <span class=" tgx_text_small" style="font-family:Arial; color:#000000; font-size:14px; text-decoration: none; margin-top: -5px; text-align: justify;">Disfruta tu estancia  con <b>todo incluido: </b>habitación, entrada a parques como Xel-Há, Xcaret, transportación aeropuerto-hotel, alimentos y bebidas... <b>leer más. </b></span> 
             <br/>  
             
           
