--- a/xcaret 2/300x250/ZoomExp300x250.html
+++ b/xcaret 2/300x250/ZoomExp300x250.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
 <head> 
 
 	<meta charset="UTF-8">
@@ -167,7 +167,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:17px; text-align:left; text-decoration: none;">Ideas increíbles para sorprender a tu pareja con un viaje inolvidable a México.</span> 
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:17px; text-align:left; text-decoration: none;">Ideas increíbles para sorprender a tu pareja con un viaje inolvidable.</span> 
                     
                    </div>
 
