--- a/xcaret 2/fade-completo.html
+++ b/xcaret 2/fade-completo.html
@@ -106,7 +106,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/XLeFP7Y.png");
+            background: url("https://i.imgur.com/brQ44JG.png");
             background-size: cover;
           
         }
