--- a/xcaret 2/300x250/ZoomExp300x250.html
+++ b/xcaret 2/300x250/ZoomExp300x250.html
@@ -171,7 +171,7 @@ a {text-decoration: none;}
                     
                    </div>
 
-                <div style="bottom:0px;height:40px;text-align:right ; margin-right: 5px;"> <img src="https://i.imgur.com/lKx4eDq.png" style="height:32px;margin-top:-15px; text-decoration: none;">
+                <div style="bottom:px;height:40px;text-align:right ; margin-right: 5px;"> <img src="https://i.imgur.com/lKx4eDq.png" style="height:32px;margin-top:10px; text-decoration: none;">
 
                 
           </div>
