--- a/xcaret 2/fade-completo.html
+++ b/xcaret 2/fade-completo.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/h4ojZXE.png");
+            background: url("https://i.imgur.com/IQ9uu5J.png");
             background-size: cover;
 
             
