--- a/Pet2/video.html
+++ b/Pet2/video.html
@@ -73,7 +73,7 @@
         <div class="carousel-container">
 			<div style="text-align:center; margin-top:-10px;">
 				<script>var playersrc;</script>
-					<iframe  width="300" height="175" src="pet.mp4"  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<iframe  width="300" height="175" src="https://i.imgur.com/LH7OuTk.gif"  frameborder="0"></iframe>
 				<script>playersrc=document.getElementById('JSytplayer').src;</script>
 			</div>
 		</div>
