--- a/Pet2/video.html
+++ b/Pet2/video.html
@@ -67,7 +67,7 @@
 
 <div class="bzm_wrapper carousel-wrapper size_300x250">
 
-    <a href=" https://goo.gl/maps/4RMdqPsSKi22" style="display: block;" target="block">
+    <a href="https://goo.gl/maps/4RMdqPsSKi22"  target="_blank">
     	<div class="cta"><a href="https://goo.gl/maps/FZ6iKWbjnhq" target="_blank"> <img src="https://i.imgur.com/YQ3iHws.png" style="height:45px;"></a></div>
 
         <div class="carousel-container">
