--- a/H&M/Fade.html
+++ b/H&M/Fade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NikeMap</title>
+    <title>HMMap</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel=stylesheet>
     <style>
         .corona p {
@@ -67,15 +67,15 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/yshtTAQ.jpg)
+            background-image: url(https://i.imgur.com/S8YCYJN.jpg)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/PMte59Z.jpg)
+            background-image: url(https://i.imgur.com/flKDb9U.jpg)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/AqzxTqU.jpg)
+            background-image: url(https://i.imgur.com/vc8JFSi.jpg)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -267,15 +267,15 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><a href="https://goo.gl/maps/FZ6iKWbjnhq" target="_blank"> <img src="https://i.imgur.com/YQ3iHws.png" style="height:45px;"></a></div>
+        <div class="cta"><a href="https://goo.gl/maps/FZ6iKWbjnhq" target="_blank"> <img src="https://i.imgur.com/ViMLmas.png" style="height:45px;"></a></div>
         <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:center;"> ¡¡Te sorprenderá lo cerca que estás de tus nuevos Nike!!</span></div>
-            <div style="bottom:0px;height:30px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/Nm8Rc5v.png" style="height:25px;margin-top:-3px;">
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:center;"> ¿Ya sabes donde adquirir tu look favorito? ¡Ven a H&M!</span></div>
+            <div style="bottom:0px;height:30px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/P2bTbkX.jpg" style="height:40px;margin-top:-3px;">
                
                 
             </div>
