--- a/H&M/Venetian.html
+++ b/H&M/Venetian.html
@@ -2154,11 +2154,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 83px; height: 30px;
-        -ms-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
-        transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 53px; height: 37px;
+        -ms-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
+        transform: translate(0, 0) translate(266px, 443px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2219,38 +2219,38 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
-        -ms-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 327px; height: 103px;
+        -ms-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
+        transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 225px; height: 63px;
-        -ms-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
-        transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 160px; height: 45px;
+        -ms-transform: translate(0, 0) translate(84px, 380px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(84px, 380px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(84px, 380px) rotate(0deg);
+        transform: translate(0, 0) translate(84px, 380px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 25px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 65px;
-        -ms-transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 65px;
+        -ms-transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
 }
 /*#/#*//*#i65.text.css:text/base/css*/
 #i65 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i65.i66.positioning.css:positioning/base/css.2*/
-#i65 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 268px; height: 38px;
-        -ms-transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
-        transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
+#i65 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 302px; height: 38px;
+        -ms-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2261,25 +2261,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/2wqj2o6.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/My7mBNh.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/h953QPl.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/4evfD85.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/hLVBeZt.jpg"></dataimg>
-<!--#/#--><!--#i2.i52.slice-image.html:slice-image/html-->
-<dataimg id="i52" src="https://i.imgur.com/XrGJIpr.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/SWYy7Qa.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/3HRx1aZ.jpg"/>
+<img id="i44" src="https://i.imgur.com/Ahh14wQ.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/1ze4awI.png"/>
+<img id="i16" src="https://i.imgur.com/P2bTbkX.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/YQ3iHws.png"/>
+<img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Estás a unas cuadras de las mejores ofertas de NIKE en Aeropuerto</div>
+<div id="i63">¡Un lugar para gente con estilo!</div>
 <!--#/#--><!--#i65.text.html:text/html-->
-<div id="i65">¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!</div>
+<div id="i65">¡Ven a H&M y encuentra tu look ideal!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2299,7 +2297,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: 'rgba(48,48,48,1)',
+        shadow: 'rgba(115,8,8,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2328,15 +2326,13 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i52.slice-image.js:slice-image/base/js*/
-
 /*#/#*//*#i2.i57.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i2');
 
 el.addEventListener('click', function(e){
     /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2353,7 +2349,7 @@ var el = document.getElementById('i44');
 
 el.addEventListener('click', function(e){
     /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2377,6 +2373,8 @@ var el = document.getElementById('i46');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i50.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i65.i66.positioning.js:positioning/base/js.2*/
@@ -2402,36 +2400,34 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 2wqj2o6.jpg; fileId: ; sourceTypeId: externalUrl;
+name: My7mBNh.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: h953QPl.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 4evfD85.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: hLVBeZt.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i52.slice-image.meta:slice-image/meta*/
-name: XrGJIpr.jpg; fileId: ; sourceTypeId: externalUrl;
+name: SWYy7Qa.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: 3HRx1aZ.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: Ahh14wQ.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: 1ze4awI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: P2bTbkX.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
+data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
-name: YQ3iHws.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: ViMLmas.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: Estás a unas cuadras de las mejores ofertas de NIKE en Aeropuerto; customName: false;
+name: ¡Un lugar para gente con estilo!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i65.text.meta:text/meta*/
-name: ¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!; customName: false;
+name: ¡Ven a H&M y encuentra tu look ideal!; customName: false;
 /*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
