--- a/H&M/Venetian.html
+++ b/H&M/Venetian.html
@@ -2143,7 +2143,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 250px;
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 266px;
         -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
@@ -2219,7 +2219,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 327px; height: 103px;
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 100px;
         -ms-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-1px, 337px) rotate(0deg);
@@ -2238,10 +2238,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 25px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 272px; height: 65px;
-        -ms-transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 257px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 266px) rotate(0deg);
 }
 /*#/#*//*#i65.text.css:text/base/css*/
 #i65 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2252,6 +2252,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
         transform: translate(0, 0) translate(11px, 315px) rotate(0deg);
 }
+/*#/#*//*#i68.shape.css:shape/base/css*/
+#i68 { background-color: ; opacity: 1;
+}
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 15%;
+        -ms-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 265px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2261,15 +2271,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/My7mBNh.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/l2e1rqF.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/4evfD85.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/bfHVGcj.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/SWYy7Qa.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/w6cZmT2.jpg"></dataimg>
+<!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
+<dataimg id="i72" src="https://i.imgur.com/qKNHjx9.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/Ahh14wQ.jpg"/>
+<img id="i44" src="https://i.imgur.com/tjfqkkq.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/P2bTbkX.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2278,6 +2290,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i63">¡Un lugar para gente con estilo!</div>
 <!--#/#--><!--#i65.text.html:text/html-->
 <div id="i65">¡Ven a H&M y encuentra tu look ideal!</div>
+<!--#/#--><!--#i68.shape.html:shape/html-->
+<div id="i68"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2326,10 +2340,17 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i2.i57.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i2');
 
+el.addEventListener('click', function(e){
+    /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2344,7 +2365,7 @@ var el = document.getElementById('i44');
 
 el.addEventListener('click', function(e){
     /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/cYPcEHkGfiv'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2368,11 +2389,27 @@ var el = document.getElementById('i46');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-
+/*#/#*//*#i50.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/cYPcEHkGfiv'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i65.i66.positioning.js:positioning/base/js.2*/
 bmShow('i65');
+/*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
+bmShow('i68');
+/*#/#*//*#i68.i70.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i68');
+
+el.addEventListener('click', function(e){
+    /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2394,15 +2431,18 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: My7mBNh.jpg; fileId: ; sourceTypeId: externalUrl;
+name: l2e1rqF.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 4evfD85.jpg; fileId: ; sourceTypeId: externalUrl;
+name: bfHVGcj.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: SWYy7Qa.jpg; fileId: ; sourceTypeId: externalUrl;
+name: w6cZmT2.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
+name: qKNHjx9.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: Ahh14wQ.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: tjfqkkq.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -2423,5 +2463,9 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i65.text.meta:text/meta*/
 name: ¡Ven a H&M y encuentra tu look ideal!; customName: false;
 /*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i68.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
